[1114] Added service name

--- a/app/views/sign_in/new.html.erb
+++ b/app/views/sign_in/new.html.erb
@@ -3,7 +3,7 @@
   <div class="govuk-grid-column-two-thirds-from-desktop">
 
 
-    <h1 class="govuk-heading-l">Ask for an account to Teacher Training API Admin</h1>
+    <h1 class="govuk-heading-l">Ask for an account to <%= I18n.t("service_name") %></h1>
 
     <p class="govuk-body"> Although you have a DfE Sign-in account, you also need an account
                              for this service. Contact <%= support_email %>.</p> 
