[1114] Amended to use page title

--- a/app/views/sign_in/index.html.erb
+++ b/app/views/sign_in/index.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :page_title, "Sign in" %>
+<%= render PageTitle::View.new(title: "sign_in.index") %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
