--- a/app/views/sign_in/new.html.erb
+++ b/app/views/sign_in/new.html.erb
@@ -1,4 +1,5 @@
-<%= content_for :page_title, "User not found" %>
+<%= render PageTitle::View.new(title: "sign_in.new") %>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
 
