--- a/app/views/gias/establishments/show.html.erb
+++ b/app/views/gias/establishments/show.html.erb
@@ -6,6 +6,10 @@
         <dt class="govuk-summary-list__key">URN:</dt>
         <dd class="govuk-summary-list__value"><%= @establishment.urn %></dd>
     </div>
+    <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">UKPRN:</dt>
+        <dd class="govuk-summary-list__value"><%= @establishment.ukprn %></dd>
+    </div>
 
     <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Postcode:</dt>
