[1242] Scaffold out providers view WIP

--- a/app/components/header/view.html.erb
+++ b/app/components/header/view.html.erb
@@ -14,6 +14,10 @@
         <span class="govuk-header__product-name">
           <%= service_name %>
         </span>
+
+        <strong class="govuk-tag govuk-phase-banner__content__tag">
+          <%= Settings.environment.name.titlecase %>
+        </strong>
       <% end %>
     </div>
 
