--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,30 +36,19 @@
 
     <%= render NavigationBar::View.new(
       items: [
+        { name: "Providers", url: support_providers_path, current: true },
       ],
       current_path: request.path,
       current_user: @current_user,
     ) %>
 
-    <div class="app-phase-banner app-phase-banner__env--<%= Settings.environment.name %>">
-      <div class="govuk-width-container">
-        <div class="govuk-phase-banner">
-          <p class="govuk-phase-banner__content">
-            <strong class="govuk-tag govuk-phase-banner__content__tag">
-              <%= Settings.environment.name.titlecase %>
-            </strong>
-          </p>
-        </div>
-      </div>
-    </div>
-
     <div class="govuk-width-container">
-
-    <main class="govuk-main-wrapper " id="main-content" role="main">
-      <div class="govuk-width-container">
-        <%= yield %>
-      </div>
-    </main>
+      <main class="govuk-main-wrapper " id="main-content" role="main">
+        <div class="govuk-width-container">
+          <%= yield %>
+        </div>
+      </main>
+    </div>
 
     <%= tag.footer(class: "govuk-footer", role: "contentinfo") do %>
       <div class="govuk-width-container">
