--- a/app/views/support/providers/index.html.erb
+++ b/app/views/support/providers/index.html.erb
@@ -15,7 +15,7 @@
 
   <tbody class="govuk-table__body">
     <% @providers.each do |provider| %>
-      <tr class="govuk-table__row">
+      <tr class="govuk-table__row qa-provider_row">
         <td class="govuk-table__cell">
           <span class="govuk-!-display-block govuk-!-margin-bottom-1">
             <%= govuk_link_to provider.provider_name, support_provider_path(provider) %>
