--- a/app/views/support/providers/index.html.erb
+++ b/app/views/support/providers/index.html.erb
@@ -6,31 +6,31 @@
   { name: "Providers", url: support_providers_path },
 ]) %>
 
-<table class="govuk-table">
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Provider name</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Provider code</th>
-    </tr>
-  </thead>
-
-  <tbody class="govuk-table__body">
-    <% @providers.each do |provider| %>
-      <tr class="govuk-table__row qa-provider_row">
-        <td class="govuk-table__cell">
-          <span class="govuk-!-display-block govuk-!-margin-bottom-1">
-            <%= govuk_link_to provider.provider_name, support_provider_path(provider) %>
-          </span>
-        </td>
-
-        <td class="govuk-table__cell">
-          <span class="govuk-!-display-block govuk-!-margin-bottom-1">
-            <%= provider.provider_code %>
-          </span>
-        </td>
+<%= render PaginatedFilter::View.new(filters: @filters, collection: @providers) do %>
+  <table class="govuk-table">
+    <thead class="govuk-table__head">
+      <tr class="govuk-table__row">
+        <th scope="col" class="govuk-table__header govuk-!-width-one-half">Provider name</th>
+        <th scope="col" class="govuk-table__header govuk-!-width-one-half">Provider code</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<%= render Paginator::View.new(scope: @providers) %>
+    <tbody class="govuk-table__body">
+      <% @providers.each do |provider| %>
+        <tr class="govuk-table__row qa-provider_row">
+          <td class="govuk-table__cell">
+            <span class="govuk-!-display-block govuk-!-margin-bottom-1">
+              <%= govuk_link_to provider.provider_name, support_provider_path(provider) %>
+            </span>
+          </td>
+
+          <td class="govuk-table__cell">
+            <span class="govuk-!-display-block govuk-!-margin-bottom-1">
+              <%= provider.provider_code %>
+            </span>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% end %>
