--- a/app/views/layouts/provider_record.html.erb
+++ b/app/views/layouts/provider_record.html.erb
@@ -4,6 +4,7 @@
   <%= render TabNavigation::View.new(items: [
     { name: "Details", url: support_provider_path(@provider) },
     { name: "Users", url: support_provider_users_path(@provider) },
+    { name: "Courses", url: support_provider_courses_path(@provider) },
   ]) %>
 
   <%= yield %>
