--- a/app/views/support/data_exports/index.html.erb
+++ b/app/views/support/data_exports/index.html.erb
@@ -5,13 +5,13 @@
 <%= render "support/menu" %>
 
 <% @data_exports.each do |data_export| %>
-  <section class="app-section app-section--with-top-border" id="<%= data_export.id %>">
+  <section class="app-section app-section--with-top-border" id="<%= data_export.type %>">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h2 class="govuk-heading-m"><%= data_export.name %></h2>
-        <p class="govuk-body"><%= data_export.description %></p>
+        <h2 class="govuk-heading-m"><%= t(".#{data_export.type}.name") %></h2>
+        <p class="govuk-body"><%= t(".#{data_export.type}.description") %></p>
 
-        <%= govuk_button_to "Download CSV", download_support_data_export_path(data_export.id), class: 'govuk-button--secondary' %>
+        <%= govuk_button_to "Download CSV", download_support_data_export_path(data_export.type), class: 'govuk-button--secondary' %>
       </div>
     </div>
   </section>
