--- a/app/views/support/users/_users.html.erb
+++ b/app/views/support/users/_users.html.erb
@@ -17,7 +17,9 @@
           <span class="govuk-!-display-block govuk-!-margin-bottom-1"><%= user.last_name %></span>
         </td>
         <td class="govuk-table__cell">
-          <span class="govuk-!-display-block govuk-!-margin-bottom-1"><%= user.email %></span>
+          <span class="govuk-!-display-block govuk-!-margin-bottom-1">
+            <%= govuk_link_to user.email, support_user_path(user) %>
+          </span>
         </td>
       </tr>
     <% end %>
