--- a/app/views/support/providers/index.html.erb
+++ b/app/views/support/providers/index.html.erb
@@ -5,5 +5,9 @@
 <%= render "support/menu" %>
 
 <%= render PaginatedFilter::View.new(filters: @filters, collection: @providers) do %>
+  <%= govuk_link_to("Add provider",
+        new_support_provider_path,
+        class: "govuk-button govuk-!-margin-bottom-6") %>
+
   <%= render "list", providers: @providers %>
 <% end %>
