--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,9 @@
     <div class="govuk-width-container">
       <main class="govuk-main-wrapper " id="main-content" role="main">
         <div class="govuk-width-container">
-          <%= render partial: "layouts/flash" if flash.any? %>
+
+          <%= render(FlashBanner::View.new(flash: flash)) %>
+
           <%= yield %>
         </div>
       </main>
