--- a/app/views/support/providers/new.html.erb
+++ b/app/views/support/providers/new.html.erb
@@ -32,12 +32,12 @@
         </legend>
         <%= f.fields_for :sites do |site| %>
           <%= site.govuk_text_field :code, label: { text: "Site code", size: "s" } %>
-          <%= site.govuk_text_field :location_name, label: { text: "Site location name", size: "s" } %>
-          <%= site.govuk_text_field :address1, label: { text: "Site address1", size: "s" } %>
-          <%= site.govuk_text_field :address2, label: { text: "Site address2", size: "s" } %>
-          <%= site.govuk_text_field :address3, label: { text: "Site address3", size: "s" } %>
-          <%= site.govuk_text_field :address4, label: { text: "Site address4", size: "s" } %>
-          <%= site.govuk_text_field :postcode, label: { text: "Site postcode", size: "s" } %>
+          <%= site.govuk_text_field :location_name, label: { text: "Name", size: "s" } %>
+          <%= site.govuk_text_field :address1, label: { text: "Building address one", size: "s" } %>
+          <%= site.govuk_text_field :address2, label: { text: "Building address two", size: "s" } %>
+          <%= site.govuk_text_field :address3, label: { text: "Town or city", size: "s" } %>
+          <%= site.govuk_text_field :address4, label: { text: "County", size: "s" } %>
+          <%= site.govuk_text_field :postcode, label: { text: "Postcode", size: "s" } %>
         <% end %>
       </fieldset>
 
