[1916] Added backlink to the provider show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,9 @@
     ) %>
 
     <div class="govuk-width-container">
+      <div class="govuk-width-container">
+        <%= yield :breadcrumbs %>
+      </div>
       <main class="govuk-main-wrapper " id="main-content" role="main">
         <div class="govuk-width-container">
 
