--- a/app/views/layouts/provider_record.html.erb
+++ b/app/views/layouts/provider_record.html.erb
@@ -1,6 +1,13 @@
 <%= extends_layout :application do %>
-  <h1 class="govuk-heading-l"><%= @provider.provider_name %></h1>
+  <%= content_for(:breadcrumbs) do %>
+    <%= render GovukComponent::BackLink.new(
+      text: 'All provider records',
+      href: support_providers_path,
+    ) %>
+  <% end %>
   
+  <h1 class="govuk-heading-l"><%= @provider.provider_name %></h1>
+
   <%= render TabNavigation::View.new(items: [
     { name: "Details", url: support_provider_path(@provider) },
     { name: "Users", url: users_support_provider_path(@provider) },
