--wip-- Publish merge - provider show page

--- a/app/webpacker/styles/application.scss
+++ b/app/webpacker/styles/application.scss
@@ -1,3 +1,5 @@
 @import "./govuk_style_setup";
 @import "~govuk-frontend/govuk/all";
 @import "~@ministryofjustice/frontend/moj/all";
+
+@import "./_status-box.scss";
