--- a/app/views/support/allocation_uplifts/new.html.erb
+++ b/app/views/support/allocation_uplifts/new.html.erb
@@ -2,6 +2,13 @@
 
 <h1 class="govuk-heading-l">Create an Allocation Uplift for <%= @allocation_uplift.provider.provider_name %></h1>
 
+<%= content_for(:breadcrumbs) do %>
+    <%= render GovukComponent::BackLinkComponent.new(
+      text: "Allocation record for #{@allocation_uplift.provider.provider_name}",
+      href: support_allocation_path(@allocation_uplift.allocation.id),
+    ) %>
+<% end %>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <%= form_with model: [:support, @allocation_uplift], local: true do |f| %>
