--- a/app/views/support/allocation_uplifts/edit.html.erb
+++ b/app/views/support/allocation_uplifts/edit.html.erb
@@ -11,7 +11,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <%= form_with model: [:support, @allocation_uplift], local: true do |f| %>
+    <%= form_with model: [@allocation, @allocation_uplift], url: support_allocation_uplift_path, local: true, method: :patch do |f| %>
         
     <%= f.govuk_error_summary %>
 
