--- a/app/views/publish_interface/providers/index.html.erb
+++ b/app/views/publish_interface/providers/index.html.erb
@@ -5,7 +5,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <% if current_user.present? && current_user.admin? %>
-      <%= render partial: "search" %>
+      <%# <%= render partial: "search" %1> %>
     <% end %>
 
     <ul class="govuk-list">
