[320] Set row action to nil to inset change link

--- a/app/views/support/allocations/show.html.erb
+++ b/app/views/support/allocations/show.html.erb
@@ -11,16 +11,19 @@
   component.row do |row|
     row.key { "Provider Name" }
     row.value { @allocation.provider.provider_name }
+    row.action(href: nil)
   end
 
   component.row do |row|
     row.key { "Accredited Body Name" }
     row.value { @allocation.accredited_body.provider_name }
+    row.action(href: nil)
   end
 
   component.row do |row|
     row.key { "Allocations" }
     row.value { @allocation.confirmed_number_of_places.to_s }
+    row.action(href: nil)
   end
 
   component.row do |row|
