--- a/app/views/support/allocations/show.html.erb
+++ b/app/views/support/allocations/show.html.erb
@@ -15,8 +15,20 @@
   end
 
   component.row do |row|
+    row.key { "Provider Code" }
+    row.value { @allocation.provider.provider_code }
+    row.action(href: nil)
+  end
+
+  component.row do |row|
     row.key { "Accredited Body Name" }
     row.value { @allocation.accredited_body.provider_name }
+    row.action(href: nil)
+  end
+
+  component.row do |row|
+    row.key { "Accredited Body Code" }
+    row.value { @allocation.accredited_body.provider_code }
     row.action(href: nil)
   end
 
