--- a/app/views/support/users/_users.html.erb
+++ b/app/views/support/users/_users.html.erb
@@ -8,7 +8,7 @@
   </thead>
 
   <tbody class="govuk-table__body">
-    <% users.each do |user| %>
+    <% @users.each do |user| %>
       <tr class="govuk-table__row user-row">
         <td class="govuk-table__cell">
             <span class="govuk-!-display-block govuk-!-margin-bottom-1"><%= user.first_name %></span>
