[603] Add backlinks, page titles and environment headers

--- a/app/views/layouts/provider_record.html.erb
+++ b/app/views/layouts/provider_record.html.erb
@@ -1,3 +1,5 @@
+<%= render PageTitle::View.new(title: "support.providers.show") %>
+
 <%= extends_layout :application do %>
   <%= content_for(:breadcrumbs) do %>
     <%= render GovukComponent::BackLinkComponent.new(
