--- a/app/views/support/allocation_uplifts/new.html.erb
+++ b/app/views/support/allocation_uplifts/new.html.erb
@@ -1,4 +1,4 @@
-<%= render PageTitle::View.new(title: "support.allocation_uplifts.edit") %>
+<%= render PageTitle::View.new(title: "support.allocation_uplifts.new") %>
 
 <h1 class="govuk-heading-l">Create an Allocation Uplift for <%= @allocation_uplift.provider.provider_name %></h1>
 
