--- a/app/views/support/allocations/show.html.erb
+++ b/app/views/support/allocations/show.html.erb
@@ -1,3 +1,5 @@
+<%= render PageTitle::View.new(title: "support.allocations.show") %>
+
 <%= content_for(:breadcrumbs) do %>
     <%= render GovukComponent::BackLinkComponent.new(
       text: "All Allocation records",
