--- a/app/views/support/providers/new.html.erb
+++ b/app/views/support/providers/new.html.erb
@@ -1,3 +1,12 @@
+<%= render PageTitle::View.new(title: "support.providers.new") %>
+
+<%= content_for(:breadcrumbs) do %>
+    <%= render GovukComponent::BackLinkComponent.new(
+      text: "All Provider records",
+      href: support_providers_path,
+    ) %>
+<% end %>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <%= form_with model: [:support, @provider], local: true do |f| %>
