--- a/app/views/support/users/new.html.erb
+++ b/app/views/support/users/new.html.erb
@@ -1,3 +1,12 @@
+<%= render PageTitle::View.new(title: "support.users.new") %>
+
+<%= content_for(:breadcrumbs) do %>
+    <%= render GovukComponent::BackLinkComponent.new(
+      text: "All User records",
+      href: support_users_path,
+    ) %>
+<% end %>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <%= form_with model: [:support, @user], local: true do |f| %>
