[603] Environment banner color corrected

--- a/app/components/header/view.html.erb
+++ b/app/components/header/view.html.erb
@@ -14,10 +14,11 @@
         <span class="govuk-header__product-name">
           <%= service_name %>
         </span>
-
-        <strong class="govuk-tag govuk-phase-banner__content__tag">
-          <%= Settings.environment.name.titlecase %>
-        </strong>
+        <span class="app-phase-banner__env--<%= Settings.environment.name %>">
+          <strong class="govuk-tag govuk-phase-banner__content__tag">
+            <%= Settings.environment.name.titlecase %>
+          </strong>
+        </span>
       <% end %>
     </div>
 
