--- a/app/views/support/allocations/index.html.erb
+++ b/app/views/support/allocations/index.html.erb
@@ -5,5 +5,5 @@
 <%= render "support/menu" %>
 
 <%= render PaginatedFilter::View.new(filters: @filters, collection: @allocations, filter_label: t("components.filter.allocations.text_search")) do %>
-  <%= render "list", allocations: @allocations %>
+  <%= render AllocationRecordCard::View.with_collection(@allocations)%>
 <% end %>
