--- a/app/components/providers/filters/view.html.erb
+++ b/app/components/providers/filters/view.html.erb
@@ -25,7 +25,7 @@
             </div>
 
             <% filters.each do |filter, value| %>
-              <h3 class="govuk-heading-s govuk-!-margin-bottom-0"><%= filter_label_for(filter) %></h3>
+              <h3 class="govuk-heading-s govuk-!-margin-bottom-0"><%= filter_label %></h3>
               <ul class="moj-filter-tags">
                 <% tags_for_filter(filter, value).each do |tag| %>
                   <li>
