Add separate layouts for Publish and Support
As Publish is gradually merged into TTAPI, we'll have two quite distinct
user interfaces in the app - one for Publish, the other for Support.

Rework the layout files to reflect this need.

--- a/app/views/layouts/provider_record.html.erb
+++ b/app/views/layouts/provider_record.html.erb
@@ -1,13 +1,13 @@
 <%= render PageTitle::View.new(title: "support.providers.show") %>
 
-<%= extends_layout :application do %>
+<%= extends_layout :support do %>
   <%= content_for(:breadcrumbs) do %>
     <%= render GovukComponent::BackLinkComponent.new(
       text: 'All provider records',
       href: support_providers_path,
     ) %>
   <% end %>
-  
+
   <h1 class="govuk-heading-l"><%= @provider.provider_name %></h1>
 
   <%= render TabNavigation::View.new(items: [
