--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,18 +29,16 @@
 
     <%= govuk_skip_link %>
 
-    <%= render Header::View.new(
-      service_name: I18n.t("service_name"),
-      items: header_items(@current_user),
-    ) %>
+    <% if content_for?(:header) %>
+      <%= yield :header %>
+    <% else %>
+      <%= render Header::View.new(
+        service_name: I18n.t("service_name"),
+        items: header_items(@current_user),
+      ) %>
+    <% end %>
 
-    <%= render NavigationBar::View.new(
-      items: [
-        { name: "Providers", url: support_providers_path, current: true },
-      ],
-      current_path: request.path,
-      current_user: @current_user,
-    ) %>
+    <%= yield :navigation_bar %>
 
     <div class="govuk-width-container">
       <div class="govuk-width-container">
@@ -61,9 +59,9 @@
         <div class="govuk-footer__meta">
           <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
             <div class="govuk-footer__meta-custom">
-              
+
             </div>
-           
+
           </div>
           <div class="govuk-footer__meta-item">
             <%= govuk_link_to raw(%(&copy Crown copyright)), "https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/", class: "govuk-footer__link govuk-footer__copyright-logo" %>
