--- a/app/components/allocation_record_card/style.scss
+++ b/app/components/allocation_record_card/style.scss
@@ -94,3 +94,9 @@
   overflow-wrap: break-word;
   margin-top: 0;
 }
+
+.filter-row {
+  @include govuk-media-query($until: desktop) {
+    padding-top: govuk-spacing(7);
+  }
+}
