Update courses index and course edit views
Also updating translation files to have more descriptive erros

--- a/app/views/support/courses/edit.html.erb
+++ b/app/views/support/courses/edit.html.erb
@@ -1,13 +1,19 @@
 <%= render PageTitle::View.new(title: "support.providers.courses.edit") %>
 
+<h1 class="govuk-heading-l">Edit course details</h1>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <%= form_with model: [:support, @provider, @course], local: true do |f| %>
-          
+
       <%= f.govuk_error_summary %>
 
-      <%= f.govuk_text_field(:course_code, 
-      label: { text: "Edit course code", tag: "h1", size: "l" }, width: 10) %>
+      <%= f.govuk_text_field(:course_code,
+      label: { text: "Course code", tag: "h1", size: "m" }, width: 10) %>
+      <%= f.govuk_text_field(:name,
+      label: { text: "Course title", tag: "h1", size: "m" }, width: 10) %>
+      <%= f.govuk_date_field(:start_date,
+      legend: { text: "Start date" }, width: 10) %>
+
       <%= f.govuk_submit %>
     <% end %>
 
