Fix rubocop complaints

--- a/app/views/support/providers/show.html.erb
+++ b/app/views/support/providers/show.html.erb
@@ -1,1 +1,1 @@
-<%= render Providers::ProviderListComponent.new(@provider) %>
+<%= render Providers::ProviderListComponent.new(provider: @provider) %>
