Address PR comments - Rename view component and add previews - add visually hidden text - rename variables in test files - update radio button views - refactor string look up into translation file

--- a/app/components/providers/provider_list/view.html.erb
+++ b/app/components/providers/provider_list/view.html.erb
@@ -14,13 +14,13 @@
   component.row do |row|
     row.key { "Accredited provider" }
     row.value { formatted_accrediting_provider }
-    row.action(text: "Change", href: edit_support_provider_url(@provider))
+    row.action
   end
 
   component.row do |row|
     row.key { "Provider type" }
     row.value { formatted_provider_type }
-    row.action(text: "Change", href: edit_support_provider_url(@provider))
+    row.action(text: "Change", href: edit_support_provider_url(@provider), visually_hidden_text: 'provider type')
   end
 
   component.row do |row|
