--- a/app/components/filters/provider_attributes/view.html.erb
+++ b/app/components/filters/provider_attributes/view.html.erb
@@ -1,5 +1,5 @@
 <div class="govuk-form-group">
-  <%= label_tag "provider_search", filter_label, class: "govuk-label govuk-label--s" %>
+  <%= label_tag "provider_search", t("components.filter.providers.provider_search"), class: "govuk-label govuk-label--s" %>
   <%= text_field_tag "provider_search", (filters[:provider_search] if filters), spellcheck: false, class: "govuk-input" %>
 </div>
 <div class="govuk-form-group">
